--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Frame</title>
     <style>
+        /* body এর জন্য ব্যাকগ্রাউন্ড কালার */
+        body {
+            background-color: rgb(255, 1, 86); /* লাল রং */
+            margin: 0; /* ডিফল্ট মার্জিন সরান */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* পুরো স্ক্রিনের উচ্চতা নিন */
+        }
+
         /* ফ্রেমের স্টাইল */
         .video-frame {
             width: 388px; /* প্রস্থ */
             height: 158px; /* উচ্চতা */
             position: relative;
             overflow: hidden;
+            border: 2px solid #000; /* ফ্রেমের বর্ডার */
+            background-color: #000; /* ভিডিও ফ্রেমের ব্যাকগ্রাউন্ড কালার */
         }
 
         /* ভিডিওর স্টাইল */
@@ -29,6 +41,5 @@
             আপনার ব্রাউজার ভিডিওটি সাপোর্ট করে না।
         </video>
     </div>
-    
 </body>
 </html>
