--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* body এর জন্য ব্যাকগ্রাউন্ড কালার */
         body {
-            background-color: rgb(255, 1, 86); /* লাল রং */
+            background-color: #1E1E1E; /* লাল রং */
             margin: 0; /* ডিফল্ট মার্জিন সরান */
             display: flex;
             justify-content: center;
