--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- ভিডিও ফ্রেম -->
     <div class="video-frame">
         <video autoplay loop muted>
-            <source src="your_video.mp4" type="video/mp4">
+            <source src="my_vedio.mp4" type="video/mp4">
             আপনার ব্রাউজার ভিডিওটি সাপোর্ট করে না।
         </video>
     </div>
